--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #E4EBED;
+    /* background-color: #E4EBED; */
 }
 
 .nested{
@@ -64,7 +64,7 @@ body {
     
     font-size: 25px;
     font-family: AtlasGrotesk-editor-rtl,AtlasGrotesk-editor,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    background-color: #E4EBED;
+    /* background-color: #E4EBED; */
     position: relative;
     border-width:0px;
     border:none;
